header修正。スムーススクロールライブラリの追加。

--- a/laravel/public/assets/css/front/components/header.css
+++ b/laravel/public/assets/css/front/components/header.css
@@ -9,6 +9,12 @@ ul {
   color: white !important;
 }
 
+#header {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+
 /*=============================
 #nav-btn
 =============================*/
