ページネーション追加。AJAX処理追加。

--- a/laravel/public/assets/css/front/index.css
+++ b/laravel/public/assets/css/front/index.css
@@ -54,6 +54,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin-top: 30px;
   transition: 0.3s;
+  width: 380px;
 }
 
 #notice .notice-articles .item:hover {
@@ -75,6 +76,17 @@
 .notice-articles .item .container .date-time {
   text-align: right;
   margin-top: 100px;
+}
+
+/* ページネーション */
+.pagination {
+  display: -ms-flexbox;
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+  border-radius: 0.25rem;
+  justify-content: center;
+  margin-top: 30px;
 }
 
 /*=============================
